Delete <br> and fix some spacing

--- a/P02 Company Merge/css/service.css
+++ b/P02 Company Merge/css/service.css
@@ -1,3 +1,25 @@
+.parallax img, .parallax {
+  float: left;
+  width: 100%;
+  height: 30vh;
+  padding-top: 20px;
+  margin: 0;
+  object-fit: cover;
+}
+
+.centered {
+  top: 50%;
+  left: 50%;
+  text-align: center;
+  transform: translate(0%, -50%);
+  font-family: 'Bellefair', serif;
+  color: white;
+  font-size: 3rem;
+  font-weight: lighter;
+  padding: 0;
+  margin: 0;
+}
+
 .prodcontainer {
   position: relative;
   width: 100%;
@@ -23,13 +45,15 @@
 }
 
 .prodcontainer:hover .prodoverlay {
-  opacity: 1;
+  opacity: .99;
+  cursor: pointer;
 }
 
 .prodcontainer h2 {
   font-family: "Playfair Display", "Times New Roman", Times, serif;
   color: #c29d59;
 }
+
 .prodcontainer ul {
   /* text-align:left;
   padding-left: 3.5em; */
@@ -37,7 +61,7 @@
 
 .prodtext {
   color: white;
-  position: absolute;
+  position: relative;
   top: 50%;
   left: 50%;
   -webkit-transform: translate(-50%, -50%);
@@ -46,25 +70,43 @@
   text-align: center;
 }
 
-/* gallery and checkout grid layout */
+a {
+  display: block;
+  padding-top: 1em;
+}
+
+p, h2 {
+  margin: 0;
+  padding: 1em;
+}
+
+/* gallery layout */
 /* retrieved from https://www.w3schools.com/css/css3_flexbox_responsive.asp */
 .row {
   display: flex;
   flex-wrap: wrap;
-  padding: 0 4px;
+  padding: 2em;
+}
+
+.background {
+  background-color: #FAF0E6;
+  display: block;
+  margin-left: 0;
+  margin-right: 0;
+  margin-bottom: 0;
 }
 
 /* three equal columns */
 .column {
   flex: 33%;
   max-width: 33%;
-  padding: 0 4px;
+  padding: 2em;
 }
 
 .column img {
-  margin-top: 8px;
+  margin-top: 2em;
   vertical-align: middle;
-  width:100%;
+  width: 100%;
 }
 
 /* media query, changes the layout to 2 columns instead of three */
